@@ -1,4 +1,9 @@
 Changes in version 0.1.2.5-xxxx - 200?-??-??
+  o Major features:
+    - Enable "BEGIN_DIR" cells: prefer to connect to the directory
+      server via TLS so we do encrypted directory requests rather than
+      plaintext. Only used if you enable the TunnelDirConns config option.
+
   o Minor features:
     - Start using the state file to store bandwidth accounting data:
       the bw_accounting file is now obsolete. We'll keep generating it
